--- a/_slides/cours1/index.html
+++ b/_slides/cours1/index.html
@@ -21,18 +21,17 @@ reveal_config:
   <section data-markdown>
     ## Patrick Lécuyer
 
-    VP Architecure Sécurité - IaaS et PaaS - Morgan Stanley
+    Customer Engineer - Google Cloud
 
-    18 ans d'expérience en TI dans différentes industries:
+    20 ans d'expérience en TI dans différentes industries
 
+    - Morgan Stanley
+    - FxInnovation
     - Cirque du Soleil
+    - Banque Nationale
+    - Cognicase
     - Domtar
-    - Secteur financier
-    - Agences de santé
-
-    Membre de Customer Advisory Boards:
-    - Google Cloud Platform
-    - Bracket Computing
+    - Valeurs Mobilières Desjardins
   </section>
   <section data-markdown>
     ##Comment me rejoindre?
@@ -67,11 +66,14 @@ reveal_config:
     |Cours|Contenu|
     |-----|-------|
     |1| Introduction|
-    |2| Concepts mathématiques de base|
-    |3-4| Algorithmes modernes|
-    |5-6| Attaques|
-    |7-10| Application en entreprise|
-    |11 | Infonuagique et Présentation Google|
+    |2| Introduction à la cryptographie|
+    |3| Concepts mathématiques de base|
+    |4| Gestion des clés cryptographiques|
+    |5-6| Algorithmes moderne|
+    |7| Attaques|
+    |8-9| Architectures cryptographiques d'entreprise|
+    |10 | Infonuagique|
+    |11| Blockchain|
     |12| Étude de cas|
     |13| Révision|
   </section>
@@ -81,11 +83,11 @@ reveal_config:
 
   |Quiz|Date|
   |-----|-------|
-  |1| 9 Février|
-  |2| 23 février|
-  |3| 16 mars|
-  |4| 30 mars|
-  |5| 13 avril|
+  |1| 8 Février|
+  |2| 22 février|
+  |3| 15 mars|
+  |4| 29 mars|
+  |5| 12 avril|
   </section>
   <section data-markdown>
   ## Examen Final
@@ -99,7 +101,7 @@ reveal_config:
    * Groupe 01: Montréal
    * Groupe 11: Québec
 
-   ** Date de l'examen**: 20 avril
+   ** Date de l'examen**: 26 avril
  </section>
   <section data-markdown>
     ##Laboratoires
@@ -107,6 +109,13 @@ reveal_config:
     * Les laboratoires individuels ne sont pas évalués
     * Le contenu des laboratoires est matière à examen
   </section>
+  <section data-markdown>
+    ## Mes Attentes
+
+    - Les étudiants doivent prendre leur propres notes.  Les contenu des notes publiés sera minimal.
+    - N'hésitez pas à poser des questions.  Nous construirons sur les contepts de base au cours de la session.
+    - La majorité des cours contiendront des laboratoires et des démos. Assurez-vous de bien suivre les démos et refaire les laboratoires.
+</section>
 </section>
 <section>
   <section data-markdown>
@@ -145,54 +154,8 @@ Utiliser votre addresse @polymtl.ca pour vous enregistrer à Slack
 <section data-markdown>
 #Demo Slack
 </section>
-<section data-markdown>
-##Vagrant + Virtualbox
-Vagrant est un outil pour construire et distribuer des environnements virtualisés reproductibles.  Cet outil sera utilisé pour distribuer les environnements de laboratoire utilisés dans le cadre du cours.
-
- Vagrant requiert que l'hyperviseur Virtualbox soit présent sur le système mais il est également possible d'utiliser VMware player
-</section>
-<section data-markdown>
-## Installation de virtualbox
-1. Télécharger la dernière version de Virtualbox sur https://www.virtualbox.org/wiki/Downloads
-2. Installer Virtualbox sur votre système.  Ceci demandera un redémarrage.
-3. Assurez-vous que Virtualbox démarre bien:
-
-![virtualbox](images/virtualbox.png)
-</section>
-<section data-markdown>
-## Installation de Vagrant
-1. Téléchargez Vagrant sur www.vagrantup.com
-2. Installez Vagrant sur votre système
-3. Pour les utilisateurs **Windows** seulement, télécharger le fichier ssh.zip du site [Moodle](http://moodle.polymtl.ca) et extraire son contenu dans le répertoire `C:\Hasicorp\vagrant\bin`
-4. Créez un répertoire pour le laboratoire du Cours 1 dans votre répertoire 'home'; pour les utilisateurs Windows 'C:\Users\votrenom\CR490-cours1' .  Un nouveau répertoire devra être créé pour chaque cours contenant un laboratoire
-5. Téléchargez le fichier Vagrantfile dans la section Cours 1 du site Moodle du cours et déposez-le dans ce répertoire; pour les utilisateurs Windows, il faudra renommer le 'Vagrantfile.txt' en 'Vagrantfile' et confirmer l'avertissement de sécurité
-
-</section>
-<section data-markdown>
-## Essais
-3. Ouvrez une session ligne de commande et naviguer vers ce répertoire ('cd C:\Users\votrenom\CR490-cours1')
-4. Entrez la commande `vagrant up`
-5. La machine virtuelle devrais être téléchargée et démarrée
-6. Entrez la commande `vagrant ssh` pour ouvrir une session vers la machine virtuelle
-7. Fermez la session avec la commande `exit`
-8. Détruisez la machine virtuelle avec la commande `vagrant destroy`
-
-
-</section>
-<section data-markdown>
-#Demo Vagrant + Virtualbox
-</section>
-<section data-markdown>
-##Commandes Vagrant utiles
-- `vagrant up`: Démarre la machine virtuelle
-- `vagrant ssh [nom]`: Ouvre une session vers la machine \[nom\]
-- `vagrant destroy`: Détruit les machines virtuelles
-- `vagrant suspend`: Interrompt l'exécution des machines virtuelles sans les détruire
-<!--.slide: data-transition="zoom" -->
-</section>
 </section>
 
-</section>
 <section>
   <section data-markdown>
     # Introduction
